[package]
name = "jito-protos"
version = "0.1.0"
edition = "2021"  # Changed from "2024" (which doesn't exist) to "2021"
description = "Protobufs for working with block engine"
authors = ["Jito Foundation"]  # Changed from workspace = true
homepage = "https://github.com/jito-foundation/jito-protos"  # Changed from workspace = true
publish = false

[dependencies]
prost = "0.12"
prost-types = "0.12" # Changed from workspace = true
tonic = "0.10"# Changed from workspace = true
bincode = "1.3.3"
solana-sdk = "2.2.2"
solana-perf = "=2.2.20"
[build-dependencies]
protobuf-src = "1"
tonic-build = "0.10"
prost-build = "0.12"
